latest from flavio

--- a/sections/empirical-evaluation.tex
+++ b/sections/empirical-evaluation.tex
@@ -132,11 +132,11 @@ Function (\ref{eq:rank3}) combines idea from both (\ref{eq:rank21}) and  (\ref{e
 The top-10 users for each ranking are reported in Tab.~\ref{tab:rank1}. To appreciate the effects of these functions, we have manually labelled the top-100 user profiles for each of the rankings, using a broad type classification as \textit{individuals} as opposed to \textit{institutional players} (associations, public bodies), or \textit{professionals}. 
 %
 The fractions of on-topic users are 86\%, 83\%, and 38\% for (\ref{eq:rank1}), (\ref{eq:rank2}), and (\ref{eq:rank2}) respectively.
-Importantly, (\ref{eq:rank3}) identifies more individuals than institutions and professionals (96\%) than (\ref{eq:rank2}) and (\ref{eq:rank3}), both at 33\%, among in-topic users.
+Importantly, (\ref{eq:rank3}) identifies more individuals than institutions and professionals (96\%) than (\ref{eq:rank2}) and (\ref{eq:rank3}), both at 33\%p.
 %
 %The fractions of on-topic users are 90\%, 70\%, and \hl{X\%} respectively.
 Also, repeat users are rewarded in both rankings. Users with $\mathit{FR}(u) = 0$ and $\mathit{min\_max(\lvert Tweets (u)\rvert) < 0.005}$ are considered not active and have been assigned lowest score.
-Fig.~\ref{fig:ranks-distribution} shows the distribution of user types within the top-100 users for each of the three rankings, broken down into 10 users bins. We can see that individuals dominate in (\ref{eq:rank3}), and are fewer but  emerge earlier in the ranks when (\ref{eq:rank2}) is used.
+Fig.~\ref{fig:ranks-distribution} shows the distribution of user types within the top-100 users for each of the three rankings, broken down into 10 users bins. We can see that individuals dominate in (\ref{eq:rank3}), and are fewer but emerge earlier in the ranks when (\ref{eq:rank2}) is used.
 We plan to conduct user studies to establish useful analytics to be incorporated into our framework. 
 \begin{figure}[htb]
 	\centering
