Few typos and adjustments

--- a/sections/empirical-evaluation.tex
+++ b/sections/empirical-evaluation.tex
@@ -77,7 +77,7 @@ Thus, only 1.6\% of users appear more than once when communities with more than 
 Table~\ref{tab:repeat-users} reports the top-10 repeat users along with their \textit{Follower Rank}, and Fig.~\ref{fig:repeat-users-frequency} shows the number of repeat users per context.
 As the table is sorted by number of occurrences then by \textit{Follower Rank}, an indication of popularity,  it is not surprising to find that top users include well-known names such as Mr. Hunt, who at the time of the events was Secretary of State for Health and Social Care in the UK, with $FR =1$, and a number of associations and foundations active in the public healthcare space.
 More interesting are perhaps non-repeat users who emerge when ad hoc ranking is applied to the database, as we illustrate next.
-
+\vspace{-10pt}
 \begin{table}[htb]
 	\centering
 	\footnotesize
@@ -96,23 +96,23 @@ More interesting are perhaps non-repeat users who emerge when ad hoc ranking is 
 	\label{fig:repeat-users-frequency}
 \end{figure*}
 
-\vspace{-10pt}
+\vspace{-15pt}
 \subsection{Users ranking} \label{sec:ranking}
-%\vspace{-10pt}
+\vspace{-5pt}
 
 To demonstrate the potential value of the database, albeit on a small scale, we have tested three user ranking functions.
 As mentioned, the aim of this exercise is to provide an objective grounding for engaging with experts on finding suitable operational definitions for specific user profiles. We consider good functions those that privilege individuals over organisations or business.
 %
 \begin{table}
-			\vspace{-20pt}
+% 			\vspace{-20pt}
 	\centering
 	\footnotesize
 	\resizebox{\textwidth}{!}{
 		\input{tables/ranks-symbolic.tex}
 	}
-	\caption{Top-10 ranked users for ranking functions (\ref{eq:rank1}) and (\ref{eq:rank2}) and (\ref{eq:rank3}), with indication of whether the user is on-topic/off-topic and individual vs association.}
+	\caption{Top-10 ranked users for ranking functions (\ref{eq:rank1}) and (\ref{eq:rank2}) and (\ref{eq:rank3}), with indication of whether the user is on-topic/off-topic and individual vs association/professional.}
 	\label{tab:rank1}
-	\vspace{-30pt}
+	\vspace{-20pt}
 \end{table}
 %
 
@@ -127,12 +127,12 @@ To achieve this, \textit{Topical Focus} $\mathit{TF}$ is used as a positive cont
 %
 In contrast, function (\ref{eq:rank2}) penalises user popularity, i.e., by using the complement of \textit{Follower Rank} $\mathit{FR}$, while rewarding prominence inside communities (in-degree $\mathit{IC}$) and information spreading by also considering shared links (\textit{Topical Attachment} $\mathit{TA}$).
 %
-Function (\ref{eq:rank3}) combines idea from both (\ref{eq:rank21}) and  (\ref{eq:rank1}).
+Function (\ref{eq:rank3}) combines ideas from both (\ref{eq:rank2}) and (\ref{eq:rank1}).
 
 The top-10 users for each ranking are reported in Tab.~\ref{tab:rank1}. To appreciate the effects of these functions, we have manually labelled the top-100 user profiles for each of the rankings, using a broad type classification as \textit{individuals} as opposed to \textit{institutional players} (associations, public bodies), or \textit{professionals}. 
 %
-The fractions of on-topic users are 86\%, 83\%, and 38\% for (\ref{eq:rank1}), (\ref{eq:rank2}), and (\ref{eq:rank2}) respectively.
-Importantly, (\ref{eq:rank3}) identifies more individuals than institutions and professionals (96\%) than (\ref{eq:rank2}) and (\ref{eq:rank3}), both at 33\%p.
+The fractions of on-topic users are 86\%, 83\%, and 38\% for (\ref{eq:rank1}), (\ref{eq:rank2}), and (\ref{eq:rank3}) respectively.
+Importantly, (\ref{eq:rank3}) identifies more individuals than institutions and professionals (96\%) than (\ref{eq:rank2}) and (\ref{eq:rank1}), both at 33\%p.
 %
 %The fractions of on-topic users are 90\%, 70\%, and \hl{X\%} respectively.
 Also, repeat users are rewarded in both rankings. Users with $\mathit{FR}(u) = 0$ and $\mathit{min\_max(\lvert Tweets (u)\rvert) < 0.005}$ are considered not active and have been assigned lowest score.
