--- a/sections/incremental-user-discovery.tex
+++ b/sections/incremental-user-discovery.tex
@@ -18,7 +18,7 @@ The pipeline structure is described below, where the numbers are with reference 
 
 %\subsection{Harvesting Content and Creating Context networks} \label{sec:harvesting}
 %
-Given $C$ as in (2), all Twitter posts $P(C)$ that satisfy $C$ are retrieved, using Twitter Search APIs.
+Given $C$ as in (2), all Twitter posts $P(C)$ that satisfy $C$ are retrieved, using the Twitter Search APIs.
 Note that this step hits the API service limitations imposed by Twitter. 
 For this reason, in our evaluation we have limited our retrieval to 200 tweets/context, which is consistent with our goal to consider many contexts of limited size.
 %
