--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,3 +1,30 @@
+@INPROCEEDINGS{7569535, 
+	author={A. {Nargundkar} and Y. S. {Rao}}, 
+	booktitle={2016 International Conference on Recent Trends in Information Technology (ICRTIT)}, 
+	title={InfluenceRank: A machine learning approach to measure influence of Twitter users}, 
+	year={2016}, 
+	volume={}, 
+	number={}, 
+	pages={1-6}, 
+	keywords={feature extraction;learning (artificial intelligence);regression analysis;social networking (online);InfluenceRank;feature extraction;Twitter profiles;social media;regression-based machine learning;Twitter;Feature extraction;Measurement;Predictive models;Data models;Market research;social media influence;Twitter;machine learning;PageRank;support vector regression;influence measurement}, 
+	doi={10.1109/ICRTIT.2016.7569535}, 
+	ISSN={}, 
+	month={April},}
+
+
+@INPROCEEDINGS{6978961, 
+	author={G. {Razis} and I. {Anagnostopoulos}}, 
+	booktitle={2014 9th International Workshop on Semantic and Social Media Adaptation and Personalization}, 
+	title={Semantifying Twitter: The Influence Tracker Ontology}, 
+	year={2014}, 
+	volume={}, 
+	number={}, 
+	pages={98-103}, 
+	keywords={ontologies (artificial intelligence);social networking (online);influencetracker ontology;semantifying Twitter;ontology schema;semantification provision;Twitter social analytics;Twitter account;social activity;Twittersphere;SPARQL endpoint;advance semantic queries;RDFized Twitter entities;semantic graph;Twitter;Measurement;Ontologies;Resource description framework;Semantics;Uniform resource locators;Semantics;Social Media;Twitter}, 
+	doi={10.1109/SMAP.2014.23}, 
+	ISSN={}, 
+	month={Nov},}
+
 @INPROCEEDINGS {Arnaboldi2013,
     author    = "Arnaboldi, V and Conti, M and Passarella, A and Pezzoni, F",
     title     = "{Ego networks in Twitter: An experimental analysis}",
