--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -74,13 +74,13 @@
     \input{sections/empirical-evaluation.tex}
     \input{sections/implementation-limitations-and-discussion.tex}
 
-    % \bibliographystyle{splncs04}
-    % \bibliography{icwe19}
+     \bibliographystyle{splncs04}
+     \bibliography{icwe19}
     
     \section*{Acknowledgments}
-    The authors would like to thank Carlo Piccardi for many useful suggestions.
+    The authors would like to thank Prof. Carlo Piccardi at Politecnico di Milano, Italy, for his useful suggestions.
 
     \footnotesize
-    \input{Fantastic-activists.bbl}
+    %\input{Fantastic-activists.bbl}
 
 \end{document}
