--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -64,11 +64,9 @@ The application of the approach to the specific challenge of combating tropical 
 
 \anote{add the following: }
 
-We devise a system for measuring influence of Twitter users, which we call InfluenceRank, based on certain features extracted from their Twitter profiles and tweets authored over the duration of two months. As in the real world, influence of a user on social media may be judged by the engagement they drive through the content they publish. For a tweet, engagement can be most obviously measured by the number of retweets (RTs), favourites and replies it gets. Our system comprises of a regression based machine learning approach with InfluenceRank as the predictor variable against the set of our proposed features. The regression model has shown reasonable accuracy despite being fit on limited data.
-\cite{7569535}   {InfluenceRank: A machine learning approach to measure influence of Twitter users --> https://ieeexplore.ieee.org/abstract/document/7569535} 
+\cite{7569535} Proposes a supervised regression algorithm to rank influence of Twitter users. It uses sensible features as they are not based on content, but the method performs poorly. This is because it would need a huge labelled dataset to work effectively.
 
-In this paper, we propose an ontology schema towards semantification provision of Twitter social analytics. The ontology is deployed over a publicly available service that measures how influential a Twitter account is, by combining its social activity and interaction over Twitter sphere. Apart from influential quantity and quality measures, the service provides a SPARQL endpoint where users can perform advance semantic queries through the RDFized Twitter entities (mentions, replies, hash tags, photos, URLs) over the semantic graph.
-\cite{6978961}
+\cite{6978961}Proposes a method to create Twitter user ontologies considering the content type of the tweets. This approach could be used to gain insights over a user, but fails to give a comprehensive description of the user activity as it is based only on recent user activity, also due to Twitter API limitations.
 
 \anote{end new refs}
 
