--- a/sections/implementation-limitations-and-discussion.tex
+++ b/sections/implementation-limitations-and-discussion.tex
@@ -4,7 +4,7 @@
 
 
 Motivated by the need to find an operational definition of ``online activists'' that is grounded in well-established network and user-activity metrics, we have designed a Twitter content processing pipeline for systematically harvesting Twitter users based on their engagement with online socially-minded events, or campaigns, which we have called \textit{contexts}.
-Running the pipeline on an initial set of contexts yields a database of user profiles along with a number of metrics, which can then be analysed to experiment with user-defined user ranking criteria. The structure and the components of the pipeline are designed to pre-select promising candidate profiles, but the approach is unsupervised, i.e., no manual classification of example users is provided.
+The pipeline yields an incrasingly growing database of user profiles along with a number of metrics, which can then be analysed to experiment with user-defined user ranking criteria. The structure and the components of the pipeline are designed to pre-select promising candidate profiles, but the approach is unsupervised, i.e., no manual classification of example users is provided.
 We have empirically evaluated the pipeline on a case study, along with experimental scoring functions to show the viability of the approach. 
 
 \anote{add if space permits:
