shrinking to 15 pages

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -54,13 +54,12 @@
     \input{sections/empirical-evaluation.tex}
     \input{sections/implementation-limitations-and-discussion.tex}
 
-     \bibliographystyle{splncs04}
-     \bibliography{icwe19}
-    
+%     \bibliographystyle{splncs04}
+%      \bibliography{icwe19-nourls}
+%    
     \section*{Acknowledgments}
     The authors would like to thank Prof. Carlo Piccardi at Politecnico di Milano, Italy, for his useful suggestions.
 
-    \footnotesize
-    %\input{Fantastic-activists.bbl}
+    \input{Fantastic-activists.bbl}
 
 \end{document}
