--- a/sections/implementation-limitations-and-discussion.tex
+++ b/sections/implementation-limitations-and-discussion.tex
@@ -8,5 +8,5 @@ The pipeline yields a growing database of user profiles along with their associa
 We have empirically evaluated the pipeline on a case study, along with experimental scoring functions to show the viability of the approach. 
 
 The design of the pipeline show that useful harvesting of interesting users can be accomplished within the limitations imposed by Twitter on its APIs.
-The next challenge is to automate the discovery of new contexts so that the pipeline may continuously add new users to the database, and update its metrics for an increasing number of  repeat users.
+The next challenge is to automate the discovery of new contexts so that the pipeline may continuously add new and update users in the database.
 Only at this point will it be possible to   validate the entire approach, hopefully with help from third party users, on a variety of new context topics.
