CR subbmitted version

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -57,9 +57,11 @@
 %     \bibliographystyle{splncs04}
 %      \bibliography{icwe19-nourls}
 %    
+	\vspace{-10pt}
     \section*{Acknowledgments}
     The authors would like to thank Prof. Carlo Piccardi at Politecnico di Milano, Italy, for his useful suggestions.
-
+	\vspace{-10pt}
+	
     \input{Fantastic-activists.bbl}
 
 \end{document}
