--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -57,7 +57,9 @@
 %     \bibliographystyle{splncs04}
 %      \bibliography{icwe19-nourls}
 %    
+    \vspace{-10pt}
     \section*{Acknowledgments}
+    \vspace{-10pt}
     The authors would like to thank Prof. Carlo Piccardi at Politecnico di Milano, Italy, for his useful suggestions.
 
     \input{Fantastic-activists.bbl}
