Added SmartMetropolis to Acknowledgments

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -8,9 +8,9 @@
 
 \begin{document}
     %
-    \title{A customisable pipeline for continuously harvesting socially-minded Twitter users}
+    \title{A Customisable Pipeline for Continuously Harvesting Socially-Minded Twitter Users}
     %
-    \titlerunning{Harvesting socially-minded Twitter users}
+    \titlerunning{Harvesting Socially-Minded Twitter Users}
     % If the paper title is too long for the running head, you can set
     % an abbreviated paper title here
     %
@@ -59,7 +59,7 @@
 %    
     \section*{Acknowledgments}
     \vspace{-10pt}
-    The authors would like to thank Prof. Carlo Piccardi at Politecnico di Milano, Italy, for his useful suggestions.
+    The authors would like to thank Prof. Carlo Piccardi at Politecnico di Milano, Italy, for his useful suggestions and SmartMetropolis Project at Universidade Federal do Rio Grande do Norte, Brazil, for the support to the Brazilian team.
 	\vspace{-10pt}
 	
     \input{Fantastic-activists.bbl}
