--- a/sections/contexts-and-user-metrics.tex
+++ b/sections/contexts-and-user-metrics.tex
@@ -1,5 +1,5 @@
 \vspace{-10pt}
-\section{Contexts and user metrics}
+\section{Contexts and User Metrics}
 \vspace{-5pt}
 
 %Two sets of criteria are used to establish relevance.
@@ -11,7 +11,7 @@
 The aim of the pipeline is to repeatedly and efficiently discover user profiles from the Twitter post history within user-specified contexts and to use the process to grow a database of feature-rich user profiles that can be ranked according to user-defined relevance functions. 
 The criteria used to define contexts, profile relevance functions, and associated user relevance thresholds can be configured for specific applications.
 
-\subsection{Contexts and Context networks} \label{sec:contexts}
+\subsection{Contexts and Context Networks} \label{sec:contexts}
 \vspace{-5pt}
 
 A context $C$ is a Twitter query defined by a set $K$ of hashtags and/or keyword terms, a time interval $[t_1, t_2]$, and a geographical constraint  $s$, such as  a bounding box:
@@ -33,7 +33,7 @@ either (i) $p_2$ is a retweet of $p_1$, or (ii) $p_1$ contains a mention of $u_2
 For any such edge, $w$ is a count of such pairs of posts occurring in $P(C)$ for the same pair of users.
 
 %\vspace{-5pt}
-\subsection{User relevance metrics}  \label{sec:metrics}
+\subsection{User Relevance Metrics}  \label{sec:metrics}
 
 We support metrics that are generally accepted by the community as forming a core, from which many different social user roles are derived~\cite{RIQUELME2016949}. 
 We distinguish amongst three types of features, which differ in the way they are computed from the raw Twitter feed:
