--- a/sections/implementation-limitations-and-discussion.tex
+++ b/sections/implementation-limitations-and-discussion.tex
@@ -1,5 +1,5 @@
 \vspace{-10pt}
-\section{Conclusions and lessons learnt}
+\section{Conclusions and Lessons Learnt}
 \vspace{-10pt}
 
 
@@ -9,4 +9,4 @@ We have empirically evaluated the pipeline on a case study, along with experimen
 
 The design of the pipeline show that useful harvesting of interesting users can be accomplished within the limitations imposed by Twitter on its APIs.
 The next challenge is to automate the discovery of new contexts so that the pipeline may continuously add new and update users in the database.
-Only at this point will it be possible to   validate the entire approach, hopefully with help from third party users, on a variety of new context topics.
+Only at this point will it be possible to validate the entire approach, hopefully with help from third party users, on a variety of new context topics.
